--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -5,17 +5,14 @@ RUN mkdir /app
 
 # Скопировать с локального компьютера файл зависимостей
 # в директорию /app.
-COPY /api_yamdb/requirements.txt /app
+COPY /api_yamdb/requirements.txt .
 
 # Выполнить установку зависимостей внутри контейнера.
-RUN pip3 install -r /app/requirements.txt --no-cache-dir
+RUN pip3 install -r requirements.txt --no-cache-dir
 
 # Скопировать содержимое директории /api_yamdb c локального компьютера
 # в директорию /app.
-COPY /api_yamdb/ /app
-
-# Сделать директорию /app рабочей директорией. 
-WORKDIR /app
+COPY /api_yamdb/ .
 
 # Выполнить запуск сервера разработки при старте контейнера.
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
