--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -2,6 +2,10 @@ version: '3.8'
 services:
   db:
     image: postgres:13.0-alpine
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     volumes:
       - /var/lib/postgresql/data/
     env_file:
